--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Pillow==9.1.1
-numpy==1.19.2
-streamlit==1.9.0
-Keras==2.4.3
-tensorflow==2.5.0
-psycopg2-binary==2.8.6
-h5py==3.1.0
-matplotlib==3.5.2 
-protobuf==3.20.0
+Pillow
+numpy
+streamlit
+Keras
+tensorflow
+psycopg2-binary
+h5py
+matplotlib
+protobuf
